--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -735,6 +735,7 @@ CONFIG_EXYNOS_CORESIGHT=m
 CONFIG_BOOKERCI=m
 CONFIG_GCMA=m
 # CONFIG_VH_SYSTRACE is not set
+# CONFIG_PIXEL_EM is not set
 # CONFIG_PIXEL_METRICS is not set
 # CONFIG_VH_FS is not set
 # CONFIG_VH_I2C is not set
