zuma_defconfig: Disable zcomp CPU backend due to deadlocks
The zcomp CPU instance suffers from deadlocks because it locks zstrm->lock
and zs_map_area.lock in reverse order, resulting in the following deadlock:
  zcomp_decompress
    zs_map_object          <-- locks zs_map_area.lock
      zcomp_cpu_decompress
        zcomp_stream_get   <-- locks zstrm->lock

  zcomp_compress
    zcomp_cpu_compress
      zcomp_stream_get     <-- locks zstrm->lock
      zcomp_copy_buffer
        zs_map_object      <-- locks zs_map_area.lock

Although this could be fixed, there's no point because we should always use
the Emerald Hill hardware compressor instead of using CPU compression. The
zcomp CPU code also only exists on Pixel, so there's no point in fixing it.

Just disable the zcomp CPU backends to avoid its deadlocks.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -803,6 +803,7 @@ CONFIG_PHY_EXYNOS_MIPI=m
 CONFIG_PHY_EXYNOS_MIPI_DSIM=m
 CONFIG_EXYNOS_BTS=m
 CONFIG_ZRAM_GS=m
+# CONFIG_ZCOMP_CPU is not set
 CONFIG_GOOGLE_LOGBUFFER=m
 CONFIG_TOUCHSCREEN_HEATMAP=m
 CONFIG_TOUCHSCREEN_TBN=m
