zuma_defconfig: Disable io_uring
Recent revelations have shown io_uring to be a large attack surface. Since
Android is going to block it completely, disable it outright in the kernel.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -43,6 +43,7 @@ CONFIG_RT_SOFTINT_OPTIMIZATION=y
 CONFIG_BOOT_CONFIG=y
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_FHANDLE is not set
+# CONFIG_IO_URING is not set
 CONFIG_USERFAULTFD=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
