zuma_defconfig: Disable all of Google's VH scheduler additions
Google's vendor hook scheduler additions are full of spaghetti and
unexplained optimizations. Remove them wholesale to lean exclusively on
CASS instead.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -745,8 +745,9 @@ CONFIG_GCMA=m
 # CONFIG_PIXEL_METRICS is not set
 # CONFIG_VH_FS is not set
 # CONFIG_VH_MM is not set
+# CONFIG_VH_CGROUP is not set
 # CONFIG_VH_I2C is not set
-# CONFIG_VH_PREEMPTIRQ_TRACEPOINTS is not set
+# CONFIG_VH_SCHED is not set
 CONFIG_HARDLOCKUP_DEBUG=m
 CONFIG_HARDLOCKUP_WATCHDOG=m
 CONFIG_PKVM_S2MPU_V9=m
