--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -11,7 +11,6 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
 # CONFIG_CPU_ISOLATION is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
@@ -21,7 +20,6 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_CGROUPS=y
-CONFIG_MEMCG=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_UCLAMP_TASK_GROUP=y
@@ -563,6 +561,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_VENDOR_HOOKS=y
+CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_DAX=y
 CONFIG_INTERCONNECT=y
 CONFIG_EXT4_FS=y
