--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -1,7 +1,6 @@
 CONFIG_LOCALVERSION="-Sultan"
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_IRQ_SBALANCE=y
-CONFIG_SBALANCE_EXCLUDE_CPUS="3,7,8"
+CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
@@ -12,10 +11,8 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_CPU_ISOLATION is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
-CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_UCLAMP_TASK=y
@@ -32,8 +29,8 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_CASS=y
-CONFIG_RT_SOFTINT_OPTIMIZATION=y
-# CONFIG_RD_GZIP is not set
+CONFIG_INITRAMFS_SOURCE="/home/sultan/sultan-projects/freqbench/rd-new.cpio.gz"
+CONFIG_INITRAMFS_FORCE=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
@@ -87,6 +84,7 @@ CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_ANDROID_ARM64_WORKAROUND_DMA_BEYOND_POC is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=9
+CONFIG_HZ_100=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 # CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 # CONFIG_RODATA_FULL_DEFAULT_ENABLED is not set
@@ -94,7 +92,7 @@ CONFIG_ARM64_MPAM=y
 # CONFIG_ARM64_MTE is not set
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
-CONFIG_CMDLINE="console=ttynull stack_depot_disable=on cgroup_disable=pressure kasan.page_alloc.sample=10 kasan.stacktrace=off bootconfig ioremap_guard kvm-arm.mode=protected"
+CONFIG_CMDLINE="console=ttynull stack_depot_disable=on cgroup_disable=pressure kasan.page_alloc.sample=10 kasan.stacktrace=off bootconfig ioremap_guard kvm-arm.mode=protected rcu_nocbs=0-8 isolcpus=1-8 nohz_full=1-8 loglevel=0 printk.devkmsg=on"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_PM_WAKELOCKS=y
@@ -108,7 +106,8 @@ CONFIG_ARM_PSCI_CPUIDLE=y
 # CONFIG_ARM_PSCI_CPUIDLE_DOMAIN is not set
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
