--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -682,8 +682,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=-1
-CONFIG_FTRACE=y
-CONFIG_HIST_TRIGGERS=y
+CONFIG_STACKTRACE=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_PCI_EXYNOS_GS=m
 CONFIG_PCI_EXYNOS_CAL_ZUMA=m
@@ -734,7 +733,6 @@ CONFIG_DEBUG_SNAPSHOT_DEBUG_KINFO=m
 CONFIG_EXYNOS_CORESIGHT=m
 CONFIG_BOOKERCI=m
 CONFIG_GCMA=m
-# CONFIG_VH_SYSTRACE is not set
 # CONFIG_PIXEL_EM is not set
 # CONFIG_PIXEL_METRICS is not set
 # CONFIG_VH_FS is not set
