arm64: dts: zuma: Enumerate missing EH interrupts
Emerald Hill has various useful interrupts for facilitating asynchronous
I/O. Enumerate the missing interrupts so that future changes to the driver
can utilize them.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/google-modules/soc/gs/arch/arm64/boot/dts/google/zuma.dtsi
+++ b/google-modules/soc/gs/arch/arm64/boot/dts/google/zuma.dtsi
@@ -688,7 +688,16 @@
 	eh: eh@16D00000 {
 		compatible = "google,eh";
 		reg = <0x0 0x16D00000 0x1000>;
-		interrupts = <GIC_SPI IRQ_EH_0_EH IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <GIC_SPI IRQ_EH_0_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_1_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_2_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_3_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_4_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_5_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_6_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_7_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_8_EH IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI IRQ_EH_9_EH IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&clock DOUT_CLK_EH_NOCP>;
 		clock-names = "eh-clock";
 		power-domains = <&pd_eh>;
