--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -742,6 +742,7 @@ CONFIG_GCMA=m
 # CONFIG_PIXEL_EM is not set
 # CONFIG_PIXEL_METRICS is not set
 # CONFIG_VH_FS is not set
+# CONFIG_VH_MM is not set
 # CONFIG_VH_I2C is not set
 # CONFIG_VH_PREEMPTIRQ_TRACEPOINTS is not set
 CONFIG_TICK_DRIVEN_LATGOV=y
