zuma_defconfig: Disable memory management vendor hooks
For the most part, this just adds sysfs knobs to let userspace muck around
with things we don't want it to touch. Disable the memory management vendor
hooks so userspace cannot do that.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -740,6 +740,7 @@ CONFIG_GCMA=m
 # CONFIG_PIXEL_EM is not set
 # CONFIG_PIXEL_METRICS is not set
 # CONFIG_VH_FS is not set
+# CONFIG_VH_MM is not set
 # CONFIG_VH_I2C is not set
 # CONFIG_VH_PREEMPTIRQ_TRACEPOINTS is not set
 CONFIG_HARDLOCKUP_DEBUG=m
