zuma_defconfig: Disable profiling
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -46,12 +46,12 @@ CONFIG_BOOT_CONFIG=y
 CONFIG_USERFAULTFD=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
+CONFIG_PERF_EVENTS=y
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_SLUB_CPU_PARTIAL is not set
-CONFIG_PROFILING=y
 # CONFIG_ARM64_ERRATUM_826319 is not set
 # CONFIG_ARM64_ERRATUM_827319 is not set
 # CONFIG_ARM64_ERRATUM_824069 is not set
