--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -1,5 +1,6 @@
 # CONFIG_WERROR is not set
-CONFIG_UAPI_HEADER_TEST=y
+CONFIG_LOCALVERSION="-Sultan"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -12,13 +13,12 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
+# CONFIG_CPU_ISOLATION is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
-CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_IKHEADERS=m
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_CGROUPS=y
@@ -31,61 +31,81 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
+# CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_RT_SOFTINT_OPTIMIZATION=y
+# CONFIG_RD_GZIP is not set
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+# CONFIG_RD_ZSTD is not set
 CONFIG_BOOT_CONFIG=y
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_FHANDLE is not set
-CONFIG_KALLSYMS_ALL=y
 CONFIG_USERFAULTFD=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
+# CONFIG_VM_EVENT_COUNTERS is not set
+# CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
-# CONFIG_SLAB_MERGE_DEFAULT is not set
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
+# CONFIG_SLUB_CPU_PARTIAL is not set
 CONFIG_PROFILING=y
-CONFIG_ARCH_SUNXI=y
-CONFIG_ARCH_HISI=y
-CONFIG_ARCH_QCOM=y
+# CONFIG_ARM64_ERRATUM_826319 is not set
+# CONFIG_ARM64_ERRATUM_827319 is not set
+# CONFIG_ARM64_ERRATUM_824069 is not set
+# CONFIG_ARM64_ERRATUM_819472 is not set
+# CONFIG_ARM64_ERRATUM_832075 is not set
+# CONFIG_ARM64_ERRATUM_834220 is not set
+# CONFIG_ARM64_ERRATUM_843419 is not set
+# CONFIG_ARM64_ERRATUM_1024718 is not set
+# CONFIG_ARM64_ERRATUM_1165522 is not set
+# CONFIG_ARM64_ERRATUM_1319367 is not set
+# CONFIG_ARM64_ERRATUM_1530923 is not set
+# CONFIG_ARM64_ERRATUM_1286807 is not set
+# CONFIG_ARM64_ERRATUM_1463225 is not set
+# CONFIG_ARM64_ERRATUM_1542419 is not set
+# CONFIG_ARM64_ERRATUM_1508412 is not set
+# CONFIG_ARM64_ERRATUM_2054223 is not set
+# CONFIG_ARM64_ERRATUM_2067961 is not set
+# CONFIG_CAVIUM_ERRATUM_22375 is not set
+# CONFIG_CAVIUM_ERRATUM_23154 is not set
+# CONFIG_CAVIUM_ERRATUM_27456 is not set
+# CONFIG_CAVIUM_ERRATUM_30115 is not set
+# CONFIG_CAVIUM_TX2_ERRATUM_219 is not set
+# CONFIG_FUJITSU_ERRATUM_010001 is not set
+# CONFIG_HISILICON_ERRATUM_161600802 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1003 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
+# CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
+# CONFIG_NVIDIA_CARMEL_CNP_ERRATUM is not set
+# CONFIG_SOCIONEXT_SYNQUACER_PREITS is not set
+# CONFIG_ANDROID_ARM64_WORKAROUND_DMA_BEYOND_POC is not set
 CONFIG_SCHED_MC=y
-CONFIG_NR_CPUS=32
-CONFIG_PARAVIRT_TIME_ACCOUNTING=y
-CONFIG_ARM64_SW_TTBR0_PAN=y
-CONFIG_COMPAT=y
-CONFIG_ARMV8_DEPRECATED=y
-CONFIG_SWP_EMULATION=y
-CONFIG_CP15_BARRIER_EMULATION=y
-CONFIG_SETEND_EMULATION=y
+CONFIG_NR_CPUS=9
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
+# CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
+# CONFIG_RODATA_FULL_DEFAULT_ENABLED is not set
 CONFIG_ARM64_MPAM=y
+# CONFIG_ARM64_MTE is not set
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 CONFIG_CMDLINE="console=ttynull stack_depot_disable=on cgroup_disable=pressure kasan.page_alloc.sample=10 kasan.stacktrace=off bootconfig ioremap_guard kvm-arm.mode=protected"
 CONFIG_CMDLINE_EXTEND=y
-# CONFIG_DMI is not set
+# CONFIG_EFI is not set
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
-CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
-CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_IDLE_GOV_TEO=y
-CONFIG_ARM_CPUIDLE=y
 CONFIG_ARM_PSCI_CPUIDLE=y
+# CONFIG_ARM_PSCI_CPUIDLE_DOMAIN is not set
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_ARM_SCPI_CPUFREQ=y
-CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_PKVM_MODULE_PATH="/lib/modules/"
@@ -95,34 +115,28 @@ CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_POLYVAL_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_JUMP_LABEL=y
+CONFIG_COMPAT_32BIT_TIME=y
+# CONFIG_VMAP_STACK is not set
+# CONFIG_GCC_PLUGINS is not set
 CONFIG_INTEGRATE_MODULES=y
 CONFIG_MODPROBE_PATH="/system/bin/modprobe"
-CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_CGROUP_IOCOST=y
 CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
+# CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_BINFMT_MISC=y
-CONFIG_MEMORY_HOTPLUG=y
-CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
-CONFIG_CMA_SYSFS=y
 CONFIG_CMA_AREAS=16
 CONFIG_ZSMALLOC=m
 # CONFIG_ZONE_DMA is not set
+# CONFIG_ZONE_DMA32 is not set
 CONFIG_ANON_VMA_NAME=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
-CONFIG_DAMON=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_RECLAIM=y
+# CONFIG_SPECULATIVE_PAGE_FAULT is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -271,9 +285,6 @@ CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_VSOCKETS=y
 CONFIG_CGROUP_NET_PRIO=y
-CONFIG_CAN=m
-CONFIG_CAN_VCAN=m
-CONFIG_CAN_SLCAN=m
 CONFIG_BT=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
@@ -284,7 +295,6 @@ CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_HCIUART_BCM=y
 CONFIG_BT_HCIUART_QCA=y
 CONFIG_CFG80211=m
-CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_MAC80211=m
@@ -295,22 +305,14 @@ CONFIG_PCIEAER=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCIE_DW_PLAT_EP=y
-CONFIG_PCIE_QCOM=y
-CONFIG_PCIE_KIRIN=y
 CONFIG_PCI_ENDPOINT=y
 CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_FW_CACHE is not set
-# CONFIG_SUN50I_DE2_BUS is not set
-# CONFIG_SUNXI_RSB is not set
 CONFIG_ARM_SCMI_PROTOCOL=y
 # CONFIG_ARM_SCMI_POWER_DOMAIN is not set
 CONFIG_ARM_SCPI_PROTOCOL=y
 # CONFIG_ARM_SCPI_POWER_DOMAIN is not set
-# CONFIG_EFI_ARMSTUB_DTB_LOADER is not set
 CONFIG_GNSS=y
-CONFIG_BLK_DEV_NULL_BLK=m
-CONFIG_ZRAM=m
-CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
@@ -323,7 +325,6 @@ CONFIG_SCSI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=m
-CONFIG_SCSI_LOGGING=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
@@ -341,7 +342,9 @@ CONFIG_IFB=y
 CONFIG_MACSEC=y
 CONFIG_TUN=y
 CONFIG_VETH=y
+CONFIG_PHYLIB=y
 CONFIG_LED_TRIGGER_PHY=y
+CONFIG_AX88796B_PHY=y
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -383,23 +386,8 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
-CONFIG_SERIAL_8250=y
-# CONFIG_SERIAL_8250_DEPRECATED_OPTIONS is not set
-CONFIG_SERIAL_8250_CONSOLE=y
-# CONFIG_SERIAL_8250_EXAR is not set
-CONFIG_SERIAL_8250_NR_UARTS=32
-CONFIG_SERIAL_8250_RUNTIME_UARTS=0
-CONFIG_SERIAL_8250_DW=y
-CONFIG_SERIAL_OF_PLATFORM=y
-CONFIG_SERIAL_AMBA_PL011=y
-CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
 CONFIG_SERIAL_SAMSUNG=y
 CONFIG_SERIAL_SAMSUNG_CONSOLE=y
-CONFIG_SERIAL_QCOM_GENI=y
-# CONFIG_SERIAL_QCOM_GENI_CONSOLE_DEFAULT_ENABLED is not set
-CONFIG_SERIAL_QCOM_GENI_CONSOLE=y
-CONFIG_SERIAL_SPRD=y
-CONFIG_SERIAL_SPRD_CONSOLE=y
 CONFIG_NULL_TTY=y
 CONFIG_HVC_DCC=y
 CONFIG_SERIAL_DEV_BUS=y
@@ -414,19 +402,11 @@ CONFIG_SPI=y
 CONFIG_SPI_MEM=y
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
-# CONFIG_SPMI_MSM_PMIC_ARB is not set
-# CONFIG_PINCTRL_SUN8I_H3_R is not set
-# CONFIG_PINCTRL_SUN50I_A64 is not set
-# CONFIG_PINCTRL_SUN50I_A64_R is not set
-# CONFIG_PINCTRL_SUN50I_A100 is not set
-# CONFIG_PINCTRL_SUN50I_A100_R is not set
-# CONFIG_PINCTRL_SUN50I_H5 is not set
-# CONFIG_PINCTRL_SUN50I_H6 is not set
-# CONFIG_PINCTRL_SUN50I_H6_R is not set
-# CONFIG_PINCTRL_SUN50I_H616 is not set
-# CONFIG_PINCTRL_SUN50I_H616_R is not set
+CONFIG_PINCTRL=y
+CONFIG_PINCTRL_SINGLE=y
+CONFIG_GPIOLIB=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
-CONFIG_POWER_RESET_HISI=y
+CONFIG_GPIO_PL061=y
 CONFIG_POWER_RESET_SYSCON=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL_NETLINK=y
@@ -467,6 +447,7 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_HRTIMER=y
+CONFIG_SND_DYNAMIC_MINORS=y
 # CONFIG_SND_SUPPORT_OLD_API is not set
 # CONFIG_SND_VERBOSE_PROCFS is not set
 # CONFIG_SND_DRIVERS is not set
@@ -543,7 +524,6 @@ CONFIG_SCSI_UFS_HPB=y
 CONFIG_SCSI_UFSHCD_PCI=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_DWC_TC_PLATFORM=y
-CONFIG_SCSI_UFS_HISI=y
 CONFIG_LEDS_CLASS_FLASH=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_TRANSIENT=y
@@ -553,22 +533,18 @@ CONFIG_RTC_DRV_PL030=y
 CONFIG_RTC_DRV_PL031=y
 CONFIG_DMADEVICES=y
 CONFIG_DMABUF_HEAPS=y
-CONFIG_DMABUF_SYSFS_STATS=y
 CONFIG_UIO=y
 CONFIG_VHOST_VSOCK=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_DEBUG_KINFO=y
 CONFIG_COMMON_CLK_SCPI=y
-# CONFIG_CLK_SUNXI is not set
-# CONFIG_SUNXI_CCU is not set
 CONFIG_HWSPINLOCK=y
-# CONFIG_SUN50I_ERRATUM_UNKNOWN1 is not set
+CONFIG_SUN4I_TIMER=y
 CONFIG_MAILBOX=y
-CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
+CONFIG_IOMMU_IO_PGTABLE_LPAE=y
 CONFIG_REMOTEPROC=y
 CONFIG_REMOTEPROC_CDEV=y
-CONFIG_QCOM_GENI_SE=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
@@ -579,16 +555,15 @@ CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_PWM=y
+CONFIG_RESET_CONTROLLER=y
 CONFIG_POWERCAP=y
 CONFIG_ARM_CMN=m
 CONFIG_ARM_DSU_PMU=m
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
-CONFIG_ANDROID_DEBUG_SYMBOLS=y
 CONFIG_ANDROID_VENDOR_HOOKS=y
-CONFIG_LIBNVDIMM=y
-# CONFIG_ND_BLK is not set
+CONFIG_DAX=y
 CONFIG_INTERCONNECT=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -596,6 +571,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_COMPRESSION=y
+# CONFIG_F2FS_IOSTAT is not set
 CONFIG_F2FS_UNFAIR_RWSEM=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
@@ -613,7 +589,6 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
-# CONFIG_EFIVAR_FS is not set
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
@@ -672,13 +647,15 @@ CONFIG_NLS_MAC_TURKISH=y
 CONFIG_NLS_UTF8=y
 CONFIG_UNICODE=y
 CONFIG_SECURITY=y
-CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
+CONFIG_LSM_MMAP_MIN_ADDR=32768
 CONFIG_HARDENED_USERCOPY=y
 # CONFIG_HARDENED_USERCOPY_FALLBACK is not set
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
+# CONFIG_INTEGRITY is not set
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_CCM=y
@@ -689,63 +666,37 @@ CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_BLAKE2B=y
 CONFIG_CRYPTO_MD5=y
+CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRC_CCITT=y
+CONFIG_CRC8=y
 CONFIG_XZ_DEC=y
 CONFIG_DMA_RESTRICTED_POOL=y
 CONFIG_DMA_CMA=y
-CONFIG_STACK_HASH_ORDER=12
 CONFIG_PRINTK_TIME=y
-CONFIG_PRINTK_CALLER=y
-CONFIG_DYNAMIC_DEBUG_CORE=y
-CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_INFO_DWARF4=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_HEADERS_INSTALL=y
+# CONFIG_SYMBOLIC_ERRNAME is not set
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_UBSAN=y
-CONFIG_UBSAN_TRAP=y
-# CONFIG_UBSAN_SHIFT is not set
-# CONFIG_UBSAN_BOOL is not set
-# CONFIG_UBSAN_ENUM is not set
-CONFIG_DEBUG_STACK_USAGE=y
-CONFIG_DEBUG_MEMORY_INIT=y
-CONFIG_KASAN=y
-CONFIG_KASAN_HW_TAGS=y
-CONFIG_KFENCE=y
-CONFIG_KFENCE_SAMPLE_INTERVAL=500
-CONFIG_KFENCE_NUM_OBJECTS=63
-CONFIG_KFENCE_STATIC_KEYS=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=-1
-CONFIG_SOFTLOCKUP_DETECTOR=y
-CONFIG_WQ_WATCHDOG=y
-CONFIG_SCHEDSTATS=y
-# CONFIG_DEBUG_PREEMPT is not set
-CONFIG_BUG_ON_DATA_CORRUPTION=y
-CONFIG_TRACE_MMIO_ACCESS=y
+CONFIG_FTRACE=y
 CONFIG_HIST_TRIGGERS=y
-CONFIG_PID_IN_CONTEXTIDR=y
-CONFIG_KUNIT=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_PCI_EXYNOS_GS=m
 CONFIG_PCI_EXYNOS_CAL_ZUMA=m
 CONFIG_S5910=m
-CONFIG_SUBSYSTEM_COREDUMP=m
 CONFIG_SBB_MUX=m
 CONFIG_EXYNOS_GS_COMMON_CLK=m
 CONFIG_SOC_GOOGLE=y
 CONFIG_SOC_ZUMA=y
 CONFIG_BOARD_RIPCURRENT=y
 CONFIG_GS_CHIPID=m
-CONFIG_EXYNOS_BCM_DBG=m
-CONFIG_EXYNOS_BCM_DBG_PPMU=y
 CONFIG_CAL_IF=m
+# CONFIG_CMUCAL_DEBUG is not set
 # CONFIG_CMUCAL_QCH_IGNORE_SUPPORT is not set
 CONFIG_EXYNOS_PMU_IF=m
 CONFIG_EXYNOS_PD=m
@@ -755,19 +706,14 @@ CONFIG_EXYNOS_CPUPM=m
 CONFIG_GS_ACPM=m
 CONFIG_ACPM_FLEXPMU_DBG=m
 CONFIG_ACPM_POWER_STATS=m
-CONFIG_ACPM_MBOX_TEST=m
 CONFIG_ACPM_DVFS=m
 CONFIG_ECT=m
 CONFIG_EXYNOS_DVFS_MANAGER=m
 CONFIG_EXYNOS_PM_QOS=m
-CONFIG_EXYNOS_CPUHP=m
 CONFIG_SLC_PARTITION_MANAGER=m
 CONFIG_GS_SLC_ACPM=m
 CONFIG_SLC_PMON=y
-CONFIG_PIXEL_STAT=m
-CONFIG_EXYNOS_SECURE_LOG=m
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=m
-CONFIG_PERF_TRACE_CTRS=m
 CONFIG_GSA=m
 CONFIG_GSA_PKVM=m
 CONFIG_GSA_GSC=m
@@ -786,29 +732,17 @@ CONFIG_CP_THERMAL=m
 CONFIG_DEBUG_SNAPSHOT=m
 CONFIG_DEBUG_SNAPSHOT_NR_CPUS=9
 CONFIG_DEBUG_SNAPSHOT_DEBUG_KINFO=m
-CONFIG_EXYNOS_EHLD=m
-CONFIG_EXYNOS_DEBUG_TEST=m
-CONFIG_PIXEL_DEBUG_TEST=m
-CONFIG_EXYNOS_ITMON=m
 CONFIG_EXYNOS_CORESIGHT=m
-CONFIG_EXYNOS_ECC_HANDLER=m
-CONFIG_EXYNOS_CORESIGHT_ETM=m
-CONFIG_EXYNOS_CORESIGHT_ETF=y
-CONFIG_EXYNOS_CORESIGHT_ETR=y
-CONFIG_EXYNOS_ADV_TRACER=m
-CONFIG_EXYNOS_ADV_TRACER_S2D=m
-CONFIG_PIXEL_BOOT_METRICS=m
-CONFIG_PIXEL_SUSPEND_DIAG=m
-CONFIG_GS_SJTAG=m
 CONFIG_BOOKERCI=m
-CONFIG_ETM2DRAM=m
 CONFIG_GCMA=m
+# CONFIG_VH_SYSTRACE is not set
+# CONFIG_PIXEL_METRICS is not set
+# CONFIG_VH_FS is not set
 # CONFIG_VH_I2C is not set
+# CONFIG_VH_PREEMPTIRQ_TRACEPOINTS is not set
 CONFIG_HARDLOCKUP_DEBUG=m
 CONFIG_HARDLOCKUP_WATCHDOG=m
-CONFIG_DBGCORE_DUMP=m
 CONFIG_PKVM_S2MPU_V9=m
-CONFIG_INPUT_KEYDEBUG=m
 CONFIG_INPUT_STMVL53L1=m
 CONFIG_GOODIX_FINGERPRINT=m
 CONFIG_KEYBOARD_S2MPG14=m
@@ -819,7 +753,6 @@ CONFIG_I2C_ACPM=m
 CONFIG_USB_XHCI_EXYNOS=m
 CONFIG_USB_DWC3_EXYNOS_GS=m
 CONFIG_USB_CONFIGFS_F_DM=m
-CONFIG_USB_CONFIGFS_F_ETR_MIU=m
 CONFIG_USB_CONFIGFS_RNDIS_GS=m
 CONFIG_TYPEC_COOLING_DEV=m
 CONFIG_TYPEC_MAX77759=m
@@ -835,7 +768,6 @@ CONFIG_SPI_S3C64XX_GS=m
 CONFIG_SPMI_BITBANG=m
 CONFIG_PINCTRL_EXYNOS_GS=m
 CONFIG_PINCTRL_SLG51002=m
-CONFIG_DEBUG_REBOOT=m
 CONFIG_GS_THERMAL_V3=m
 CONFIG_EXYNOS_ACPM_THERMAL=m
 CONFIG_EXYNOS_CPU_THERMAL=m
@@ -879,6 +811,8 @@ CONFIG_TOUCHSCREEN_OFFLOAD=m
 CONFIG_GOOG_TOUCH_INTERFACE=m
 CONFIG_TOUCHSCREEN_FTS=m
 CONFIG_TRUSTY=m
+# CONFIG_TRUSTY_LOG is not set
+# CONFIG_TRUSTY_TEST is not set
 CONFIG_TRUSTY_DMA_BUF_FFA_TAG=y
 CONFIG_TRUSTY_CRASH_IS_PANIC=y
 CONFIG_POWER_RESET_EXYNOS=m
