zuma_defconfig: Disable Android vendor/OEM data reservations in structs
Now that nothing uses these reservations anymore, remove them since they
are cruft.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/zuma_defconfig
+++ b/arch/arm64/configs/zuma_defconfig
@@ -568,6 +568,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_VENDOR_HOOKS=y
+# CONFIG_ANDROID_VENDOR_OEM_DATA is not set
 CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_DAX=y
 CONFIG_INTERCONNECT=y
